2008-09-15  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-config.[ch]: Support legacy
	options SkipMountPoints, IndexEvolutionEmail and IndexThunderbirdEmail.

2008-09-15  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-metadata-utils.c (tracker_metadata_read)
	(tracker_text_read): Don't remove the idle func when we're done
	reading metadata for one item, it can be reused for the next one.

2008-09-15  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-file-utils.c:
	(tracker_env_check_xdg_dirs): Don't warn when the XDG_DATA_HOME
	environment variable is empty (and NULL).
	
	* src/libtracker-common/tracker-ontology.c:
	(tracker_ontology_service_add): Don't add service names and field
	names in to the hash table collated, they can be looked up then.
	
	* src/tracker-indexer/tracker-metadata-utils.c: Re-enable
	thumbnail extraction now we know it isn't slowing us down in the
	indexer. 

2008-09-15  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-ontology.[ch]: Removed the
	service_directory_table GHashTable and the service_directory_list
	GList because they are unused and the API to add/remove and get
	paths is unused too. Fixed a memory leak in
	tracker_ontology_get_field_names_registered(). Don't collate
	strings before looking up the service names and field names. This
	operation is done a lot and was created/freeing memory each time
	we lookup. This is not necessary.

2008-09-15  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-ontology.[ch]:
	* src/libtracker-db/tracker-db-manager.c:
	* src/tracker-indexer/tracker-indexer-db.c:
	* src/tracker-indexer/tracker-indexer.c:
	* src/tracker-indexer/tracker-metadata.c:
	* src/trackerd/tracker-db.c:
	* src/trackerd/tracker-files.c:
	* src/trackerd/tracker-metadata.c:
	* src/trackerd/tracker-xesam-live-search.c:
	* tests/libtracker-common/tracker-ontology-test.c: More ontology